@@ -28,7 +28,16 @@ class TestCase::Lib::DoubleList {
 
     # new with undef
     {
-      my $list = DoubleList->new(undef);
+      my $list = DoubleList->new((double[])undef);
+      
+      unless ($list->length == 0) {
+        return 0;
+      }
+    }
+
+    # new without arguments
+    {
+      my $list = DoubleList->new;
       
       unless ($list->length == 0) {
         return 0;
