@@ -6,6 +6,11 @@ Revision history for SPVM
           static method new : ByteList ($array : byte[])
           [After]
           static method new : ByteList ($array : byte[]...)
+        * Change DoubleList->new method definition
+          [Before]
+          static method new : DoubleList ($array : double[])
+          [After]
+          static method new : DoubleList ($array : double[]...)
 
 0.96  2022-05-25
         [CHANGE]
